<resources>
    <string name="app_name">MLKit Test</string>
    <string name="main_fragment_title">MLKit List</string>
    <string name="barcode_scanning">Barcode Scanning</string>
    <string name="face_detection">Face Detection</string>
    <string name="image_labeling">Image Labeling</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="barcode_scanning_fragment_title">Barcode Scanning Fragment</string>
    <string name="face_detection_fragment_title">Face Detection Fragment</string>
    <string name="image_labeling_fragment_title">Image Labeling Fragment</string>
    <string name="text_recognition_fragment_title">Text Recognition Fragment</string>
    <string name="start_recognition_on_device">Recognition(Device)</string>
    <string name="start_recognition_on_cloud">Recognition(Cloud)</string>
</resources>
